<resources>
    <string name="app_name">智慧树接送系统</string>
    <string name="app_name_debug">测试智慧树接送系统</string>

    <string name="class_table_filed">班&#160;&#160;&#160;&#160;级：</string>
    <string name="time_table_filed">时&#160;&#160;&#160;&#160;间：</string>
    <string name="card_id_table_filed">卡&#160;&#160;&#160;&#160;号：</string>
    <string name="temperature_table_filed">体&#160;&#160;&#160;&#160;温：</string>
    <string name="temperature_table_value">--</string>
    <string name="rank_of_class">第%1$s名（全班）</string>
    <string name="rank_of_school">第%1$s名（全园）</string>
    <string name="level_of_user">LV%1$s</string>
    <string name="temp_table_value" formatted="false">%1$s℃</string>

    <string name="no_register_tip">您好，该设备还未经过智慧树认证授权,\n请向相关人员上报以下信息。</string>
    <string name="no_register_filed_version_name">应用版本：</string>
    <string name="no_register_filed_device_id">机器号：</string>
    <string name="no_register_no_net">您好，该设备还未连接网络，请连接网络后完成授权。</string>
    <string name="no_register_read_machine_id">您好，请上报设备机器号：%1$s</string>

    <string name="press_double_back_key_for_exit">连续按两次返回键退出程序</string>

    <string name="machine_info">Version:%1$s&#160;|&#160;SN:%2$s</string>

    <string name="network_warning_fail">考勤机无法上网，请检查您的本地网络</string>
    <string name="network_warning_unreachable">考勤机连接智慧树失败\n如长时间无法连接，请联系客服解决</string>
    <string name="font_path">fonts/sxslst.ttf</string>
    <string name="font_path_cctyt">fonts/cctyt.ttf</string>

    <!-- 分班播报 begin -->
    <string name="speaker_check_title">智慧树分班播报配置</string>
    <string name="speaker_setting1_welcome">—— 欢迎使用智慧树分班播报系统！——</string>
    <string name="speaker_setting1_content">智慧树分班播报系统，可以实现在安全接送机上刷卡考勤后，对应幼儿的班级音箱播报接送孩子提示语，方便进行园所接送管理，提升园所安全和品牌形象。\n该系统需要您的安全接送机安装有分班播报发射模块硬件，配合智慧树智能音箱联合使用。如您想使用该系统，又没有这些硬件产品，请与智慧树的经销商联系。</string>
    <string name="speaker_setting1_send_status_yes">您的安全接送机已安装发射模块硬件</string>
    <string name="speaker_setting1_send_status_no">您的安全接送机未安装发射模块硬件</string>
    <string name="speaker_setting1_net_status_yes">您的安全接送机已连接网络</string>
    <string name="speaker_setting1_net_status_no">您的安全接送机未连接网络</string>
    <string name="speaker_setting1_setting_button">开始配置</string>
    <string name="speaker_setting2_title">您已添加的音箱</string>
    <string name="speaker_setting2_add">添加新音箱</string>
    <string name="speaker_setting2_none">您还没有添加任何班级音箱，快来添加一个吧～～</string>
    <string name="speaker_setting2_item_number">音箱机器号：%s</string>
    <string name="speaker_setting2_item_button_setting">配置</string>
    <string name="speaker_setting2_item_button_delete">删除</string>
    <string name="delete_fail">删除失败！</string>
    <string name="delete_success">删除成功！</string>
    <string name="get_speaker_fail">音箱获取失败！</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="speaker_setting3_tip">打开音箱，进入配置模式</string>
    <string name="speaker_setting3_tip1">1、请接通需要配置的一台音箱电源；</string>
    <string name="speaker_setting3_tip2">2、长按音箱背面的设置键（Reset键），听到提示\"进入配置模式\"！</string>
    <string name="back">返回</string>
    <string name="back_step">上一步</string>
    <string name="next">下一步</string>
    <string name="finish">完成</string>
    <string name="speaker_setting4_tip">输入音箱信息</string>
    <string name="speaker_setting4_tip1">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;请填写音箱机器号：</string>
    <string name="speaker_setting4_tip1_port">请填写音箱机器号：</string>
    <string name="speaker_setting4_tip1_back">（机器号在音箱背面印刷）</string>
    <string name="speaker_setting4_tip2">给音箱起个好听的名字：</string>
    <string name="speaker_setting4_tip2_back">（如音箱所在的位置）</string>
    <string name="speaker_setting4_nocode">音箱机器号不能为空！</string>
    <string name="speaker_setting4_illegalcode">机器码只能输入字母和数字！</string>
    <string name="speaker_setting4_noname">音箱名字不能为空！</string>
    <string name="speaker_setting4_dialog_title">没有找到处于配置模式的音箱，请确认是否长按音箱Reset键进入了配置模式！</string>
    <string name="speaker_setting4_dialog_iknowit">知道了</string>
    <string name="speaker_setting4_illegalname">音箱名字格式错误！</string>
    <string name="speaker_setting4_code_exist">音箱号已存在！</string>
    <string name="speaker_setting4_succees">我是机器号为%s的音箱”</string>
    <string name="speaker_setting5_tip">听到播报音，完成配置</string>
    <string name="speaker_setting5_tip1">如您听到该音箱正确播报机器号，请点击完成按钮完成添加。</string>
    <string name="speaker_setting5_send_fail">连接音箱失败！</string>
    <string name="speaker_setting5_finish">操作成功！</string>
    <string name="speaker_setting5_dialog_title">您的智能考勤机目前处于断网状态\n请确保联网后重试！</string>
    <string name="speaker_setting5_save_fail">保存音箱失败！</string>
    <string name="speaker_setting5_button_list">返回列表</string>
    <string name="speaker_setting5_button_again">重试</string>
    <string name="speaker_suffix">的家长前来接送！</string>
    <string name="speaker_please_wait">请稍等&#8230;&#8230;&#8230;</string>
    <!-- 分班播报 end -->

    <string name="reader_checked">初始化成功，即将重启，请稍后&#8230;&#8230;&#8230;</string>
    <string name="reader_checking">请您刷一下卡，用来初始化&#8230;&#8230;&#8230;</string>

    <string name="sender_checked">分班播报设置完成，准备重启&#8230;&#8230;&#8230;</string>

    <string name="no_card_info">无法识别此卡</string>
    <string name="no_card_info_tip">请微信扫一扫查询具体原因</string>

    <!-- 主界面相关 begin -->
    <string name="school_name_default">北京甜水园小区幼儿园</string>
    <string name="version_name_prefix">版本：%s</string>
    <string name="sn_prefix">SN：%s</string>
    <string name="no_uploaded_records_prefix">未上传记录：%s</string>
    <string name="no_uploaded_pictures_prefix">未上传照片：%s</string>
    <string name="default_system_notice">温馨提示：请爱护考勤机，雷雨季节，做好防雨措施。</string>
    <string name="default_qrcode_tip">忘记带卡请扫码</string>
    <string name="default_family_a">爸爸</string>
    <string name="default_family_b">妈妈</string>
    <string name="default_family_c">爷爷</string>
    <string name="default_family_d">奶奶</string>

    <string name="default_class">班&#160;&#160;&#160;&#160;级：&#160;&#160;&#160;&#160;%s</string>
    <string name="default_temperature">体&#160;&#160;&#160;&#160;温：&#160;&#160;&#160;&#160;%s</string>
    <string name="default_time">时&#160;&#160;&#160;&#160;间：&#160;&#160;&#160;&#160;%s</string>
    <string name="default_number">卡&#160;&#160;&#160;&#160;号：&#160;&#160;&#160;&#160;%s</string>

    <string name="default_name">王小贝</string>
    <!-- 主界面相关 end -->

    <string name="download_apk_file_fail">下载的文件不存在</string>

    <string name="IKnowIt">知道了</string>
    <string name="factory_tip">是否开启工厂包提示？</string>

</resources>
